# stm32f103c8t6-template

./: Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
